# ambot

./: .env.example  .gitignore  Cargo.toml  README.md
gdc-runner/: .gitignore  Cargo.toml  README.md
gdc-runner/src/: appid_translator.rs  downloader.rs  gameinfo.rs  gdcrunner.rs  lib.rs
src/: cache.rs  events.rs  main.rs  notifier.rs
src/commands/: gdc.rs  help.rs  mod.rs
src/parser/: mod.rs
src/steam/: mod.rs  pics_bindings.rs
src/utls/: constants.rs  discordhelpers.rs  mod.rs
