[package]
name = "ambot"
description = "Bot used in the AlliedModders discord server"
version = "0.1.2"
authors = ["Michael Flaherty"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"]}
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0.*", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]
[dependencies.gdcrunner]
path = "gdc-runner"

[dependencies.serenity]
version = "0.12.1"
default-features = false
features = ["collector", "gateway", "builder", "standard_framework", "http", "model", "client", "framework", "utils", "rustls_backend"]